--- a/resources/assets/sass/custom/bootstrap/_variables.scss
+++ b/resources/assets/sass/custom/bootstrap/_variables.scss
@@ -56,9 +56,9 @@ $text-color: #333 !default;
 //** Global textual link color.
 $link-color: $brand-primary !default;
 //** Link hover color set via `darken()` function.
-$link-hover-color: darken($link-color, 15%) !default;
+$link-hover-color: orangered !default;
 //** Link hover decoration.
-$link-hover-decoration: underline !default;
+$link-hover-decoration: none !default;
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
