--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1431,8 +1431,8 @@ a {
 
 a:hover,
 a:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: orangered;
+  text-decoration: none;
 }
 
 a:focus {
@@ -4442,8 +4442,8 @@ fieldset[disabled] .btn-link {
 
 .btn-link:hover,
 .btn-link:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: orangered;
+  text-decoration: none;
   background-color: transparent;
 }
 
@@ -6001,7 +6001,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #23527c;
+  color: orangered;
   background-color: #eeeeee;
   border-color: #ddd;
 }
