--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -1,6 +1,20 @@
 //general
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #e4e4e4;
+    .glyphicon {
+        color: lightblue;
+    }
+    ul {
+        list-style: none;
+        padding-right: 1em;
+        li {
+            padding-top: 1em;
+        }
+    }
+    p {
+        text-indent: 1em;
+    }
 }
 
 //not found //
@@ -69,5 +83,44 @@ body {
     }
 }
 
+/////index ////////
+.page-index {
+    margin-top: 50px;
+    ul {
+        list-style: none;
+        margin: 0;
+        padding-right: 5px;
+        li {
+            padding-top: 1rem;
+            margin-right: 0;
+            a {
+                text-decoration: none;
+                &:hover {
+                    color: red;
+                }
+            }
+            .glyphicon {
+                color: #000;
+            }
+        }
+    }
+}
 
-/* CSS used here will be applied after bootstrap.css */
+////////////////page content////////////
+.page-content {
+    background-color: #f4f4f4;
+    margin-top: 50px;
+    padding-right: 2em;
+    h2 {
+        margin: 0.9em auto;
+    }
+    img {
+        margin: 20px auto;
+        width: 70%;
+        height: auto;
+    }
+    //motherboard components
+    ul {
+        list-style-type: decimal;
+    }
+}
