--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #e4e4e4;
+  overflow: visible !important;
 }
 
 body .glyphicon {
@@ -87,31 +88,78 @@ body p {
   color: red;
 }
 
-.page-index {
+#tutorial-side-nav {
+  background: #f4f4f4;
   margin-top: 50px;
+  overflow: visible;
+  width: 100%;
 }
 
-.page-index ul {
-  list-style: none;
-  margin: 0;
-  padding-right: 2px;
+#tutorial-side-nav h4 {
+  padding: 1em;
+  text-align: center;
 }
 
-.page-index ul li {
-  padding-top: 0;
-  margin-right: 0;
+#tutorial-side-nav ul {
+  background: orange;
+  z-index: 500;
+  padding-right: 0;
+  width: 100%;
 }
 
-.page-index ul li a {
-  text-decoration: none;
+#tutorial-side-nav ul li {
+  position: relative;
+  border-bottom: #cc8400 solid 1px;
+  padding: 0;
 }
 
-.page-index ul li a:hover {
-  color: red;
+#tutorial-side-nav ul li a {
+  color: #000 !important;
+  display: block;
+  padding-top: 12px;
+  padding-right: 1em;
+  padding-bottom: 12px;
+  min-width: 100%;
 }
 
-.page-index ul li .glyphicon {
-  color: #000;
+#tutorial-side-nav ul li:hover {
+  background: #1b9bff;
+  z-index: 501;
+}
+
+#tutorial-side-nav ul li:hover ul {
+  background: #1b9bff;
+  visibility: visible;
+}
+
+#tutorial-side-nav ul li:hover ul ul {
+  visibility: hidden;
+}
+
+#tutorial-side-nav ul ul {
+  position: absolute;
+  opacity: 0.98;
+  -webkit-box-shadow: 0 5px 5px;
+          box-shadow: 0 5px 5px;
+  top: 0;
+  right: 100%;
+  visibility: hidden;
+}
+
+#tutorial-side-nav ul ul li {
+  border-bottom-color: #0290ff;
+}
+
+#tutorial-side-nav ul ul li:hover {
+  background: #81c8ff;
+}
+
+#tutorial-side-nav ul ul li:hover ul {
+  visibility: visible;
+}
+
+#tutorial-side-nav ul ul ul {
+  visibility: hidden;
 }
 
 .page-content {
