--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -5,6 +5,7 @@ body {
     .glyphicon {
         color: lightblue;
     }
+    overflow: visible !important;
     ul {
         list-style: none;
         padding-right: 1em;
@@ -83,24 +84,65 @@ body {
     }
 }
 
-/////index ////////
-.page-index {
+///////////////tutorial-side-nav////////////////
+#tutorial-side-nav {
+    background: #f4f4f4;
+    h4 {
+        padding: 1em;
+        text-align: center;
+    }
     margin-top: 50px;
+    overflow: visible;
+    width: 100%;
     ul {
-        list-style: none;
-        margin: 0;
-        padding-right: 2px;
+        background: orange;
+        z-index: 500;
+        padding-right: 0;
         li {
-            padding-top: 0;
-            margin-right: 0;
+            position: relative;
+            border-bottom: darken($color: orange, $amount: 10) solid 1px;
+            padding: 0;
             a {
-                text-decoration: none;
-                &:hover {
-                    color: red;
+                color: #000 !important;
+                display: block;
+                padding-top: 12px;
+                padding-right: 1em;
+                padding-bottom: 12px;
+                min-width: 100%;
+            }
+            &:hover {
+                background: #1b9bff;
+                z-index: 501;
+                ul {
+                    background: #1b9bff;
+                    visibility: visible;
+                    ul {
+                        visibility: hidden;
+                    }
                 }
             }
-            .glyphicon {
-                color: #000;
+        }
+        width: 100%;
+        ul {
+            position: absolute;
+            opacity: 0.98;
+            box-shadow: 0 5px 5px;
+            top: 0;
+            right: 100%;
+            visibility: hidden;
+            li {
+                &:hover {
+                    ul {
+                        visibility: visible;
+                    }
+                    background: lighten($color: #1b9bff,
+                    $amount: 20);
+                }
+                border-bottom-color: darken($color: #1b9bff,
+                $amount: 5);
+            }
+            ul {
+                visibility: hidden;
             }
         }
     }
