--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -18,6 +18,17 @@ body {
     }
 }
 
+.col-divider [class*='col-']:not(:first-child):after {
+    background: #e0e0e0;
+    width: 1px;
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    display: block;
+}
+
 //not found //
 #not-found {
     margin-top: 30vh;
@@ -95,15 +106,15 @@ body {
     overflow: visible;
     width: 100%;
     ul {
-        background: orange;
+        background: #333;
         z-index: 500;
         padding-right: 0;
         li {
             position: relative;
-            border-bottom: darken($color: orange, $amount: 10) solid 1px;
+            border-bottom: darken($color: #333, $amount: 10) solid 1px;
             padding: 0;
             a {
-                color: #000 !important;
+                color: #fff !important;
                 display: block;
                 padding-top: 12px;
                 padding-right: 1em;
@@ -112,6 +123,7 @@ body {
             }
             &:hover {
                 background: #1b9bff;
+                ;
                 z-index: 501;
                 ul {
                     background: #1b9bff;
@@ -131,6 +143,9 @@ body {
             right: 100%;
             visibility: hidden;
             li {
+                a {
+                    color: #000 !important;
+                }
                 &:hover {
                     ul {
                         visibility: visible;
