--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -191,6 +191,11 @@ body p {
   padding-top: 1em;
 }
 
+.page-content ul {
+  padding-left: 2em;
+  list-style-type: circle;
+}
+
 .page-content img {
   margin: 20px auto;
   width: 70%;
