--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -174,6 +174,10 @@ body {
     h4 {
         padding-top: 1em;
     }
+    ul {
+        padding-left: 2em;
+        list-style-type: circle;
+    }
     img {
         margin: 20px auto;
         width: 70%;
