--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -23,7 +23,7 @@ body {
 .table {
     tbody {
         .odd-row {
-            background-color: rgb(239, 255, 195);
+            background-color: rgb(247, 253, 224);
         }
     }
 }
@@ -226,7 +226,7 @@ body {
 
 //////////////////////media///////////////////////
 @media(max-width:767px) {
-    .page-index {
+    #tutorial-side-nav {
         display: none;
     }
 }
