--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -211,7 +211,7 @@ ul.list-number {
     //motherboard components
     #motherboard-components {
         ul {
-            list-style-type: decimal;
+            list-style: none !important;
         }
     }
     .table {
