--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -29,6 +29,11 @@ ul.list-number {
   list-style-type: decimal !important;
 }
 
+ul.custom-list {
+  list-style: disc !important;
+  padding-right: 2em !important;
+}
+
 .table > tbody > tr > td {
   vertical-align: middle !important;
 }
