--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -34,6 +34,11 @@ ul.custom-list {
   padding-right: 2em !important;
 }
 
+ul.custom-list li .sublist-title {
+  color: red;
+  font-weight: bold;
+}
+
 .list-group .list-group-item:hover {
   background: #1b9bff;
   color: #fff;
